--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Maxime Maréchal">
+    <meta name="description" content="Listen my heroes">
     <title>Listen My Heroes</title>
     <link href="style.css" type="text/css" rel="stylesheet">
     <script src="script.js"></script>
